Make it actually work

--- a/io.github.hmlendea.geforcenow-electron.yaml
+++ b/io.github.hmlendea.geforcenow-electron.yaml
@@ -52,4 +52,4 @@ modules:
         commands:
           - 'export PATH=$PATH:/app/node/bin'
           - 'export TMPDIR="$XDG_RUNTIME_DIR/app/$FLATPAK_ID"'
-          - 'exec zypak-wrapper npm start --prefix=/app/geforcenow-electron "$@"'
+          - 'exec zypak-wrapper /app/geforcenow-electron/node_modules/electron/dist/electron /app/geforcenow-electron "$@"'
