--- a/io.github.hmlendea.geforcenow-electron.desktop
+++ b/io.github.hmlendea.geforcenow-electron.desktop
@@ -5,7 +5,7 @@ Comment=Stream games using the Nvidia GeForce NOW service
 Comment[ro]=Joacă jocuri prin streaming folosind serviciul Nvidia GeForce NOW
 Type=Application
 Exec=
-Icon=nvidia
+Icon=io.github.hmlendea.geforcenow-electron
 StartupWMClass=geforce now
 Categories=Network;Game;
 Keywords=Game;Streaming;Nvidia;GeForce;NOW;GFN;
