--- a/io.github.hmlendea.geforcenow-electron.yaml
+++ b/io.github.hmlendea.geforcenow-electron.yaml
@@ -48,5 +48,4 @@ modules:
         dest-filename: start-geforcenow-electron.sh
         commands:
           - export TMPDIR="$XDG_RUNTIME_DIR/app/$FLATPAK_ID"
-          - exec zypak-wrapper /app/geforcenow-electron/node_modules/electron/dist/electron
-            /app/geforcenow-electron/geforcenow-electron "$@"
+          - exec zypak-wrapper /app/geforcenow-electron/geforcenow-electron /app/geforcenow-electron/geforcenow-electron "$@"
