--- a/io.github.hmlendea.geforcenow-electron.yaml
+++ b/io.github.hmlendea.geforcenow-electron.yaml
@@ -11,7 +11,7 @@ command: start-geforcenow-electron
 finish-args:
   - --share=ipc
   - --socket=x11
-  - --device=dri
+  - --device=all
   - --socket=pulseaudio
   - --share=network
 
