--- a/io.github.hmlendea.geforcenow-electron.yaml
+++ b/io.github.hmlendea.geforcenow-electron.yaml
@@ -1,10 +1,10 @@
 app-id: io.github.hmlendea.geforcenow-electron
 branch: stable
 runtime: org.freedesktop.Platform
-runtime-version: '22.08'
+runtime-version: '23.08'
 sdk: org.freedesktop.Sdk
 base: org.electronjs.Electron2.BaseApp
-base-version: '22.08'
+base-version: '23.08'
 separate-locales: false
 command: start-geforcenow-electron
 
@@ -16,6 +16,7 @@ finish-args:
   - --socket=pulseaudio
   - --share=network
   - --filesystem=xdg-run/app/com.discordapp.Discord:create
+  - --filesystem=/run/udev:ro
 
 modules:
   - name: geforcenow-electron
